--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 				<button onclick="showTab(1)">Upgrades</button>
 				<button onclick="showTab(2)">Hero</button>
 			</div>
+			<div id="tab-0" class="tabs weapons" style="display:none">
+				<table class="weapons-table" cellspacing="20px" cellpading="20px">
+					<tr>
+						<th>Name</th>
+						<th>Cost</th>
+						<th>DPC</th>
+						<th>DPS</th>
+						<th>Count</th>
+						<th>Buy</th>
+					</tr>
+				</table>
+			</div>
 			<div id="tab-1" class="tabs upgrades">
 				<table class="upgrades-table" cellspacing="20px" cellpading="20px">
 					<tr>
@@ -56,30 +68,6 @@
 						<th>Count</th>
 						<th>Buy</th>
 					</tr>
-					<!-- <tr>
-						<td>
-							Super clicker
-						</td>
-						<td>
-							<span id="upcost-0">10</span> money
-						</td>
-						<td>
-							+1
-						</td>
-						<td>
-							0
-						</td>
-						<td>
-							<div id="upcount-0">
-								0
-							</div>
-						</th>
-						<td>
-							<button class="buy_button" onclick="buy_upgrade(0)">
-								Buy
-							</button>
-						</td>
-					</tr> -->
 				</table>
 			</div>
 		</div>
