--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<div id="autosave_panel" style="display:none">
 		Autosaved
 	</div>
+	<div class="prestige_panel">
+		<div class="prestige_current" id="prestige">1</div>
+		<div class="prestige_adds" id="adds">+ 0</div>
+		<div class="prestige_button" onclick="prestige()">Prestige</div>
+	</div>
 	<div class="currency_panel">
 		<div id="currency">0</div>
 		<div id="income">+0</div>
