--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" href="css/style.css">
     <title>Match-3 game</title>
-    <style type="text/css">
-      canvas { border: 1px solid black; }
-    </style>
+    
   </head>
-  <body onload="draw();">
-    <canvas id="canvas" width="422" height="422">kek</canvas>
-    <script type="text/javascript" src="engine.js"></script>
+  <body >
+    <div onload="draw();">
+        <canvas id="canvas" class="canvas" width="422" height="422">kek</canvas>
+    </div>
+    <script type="text/javascript" src="js/engine.js"></script>
   </body>
 </html>
