add sprite of circle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
   </head>
   <body >
-    <div onload="draw();">
+    <div class="contanerCanvas" onload="draw();">
         <canvas id="canvas" class="canvas" width="422" height="422">kek</canvas>
     </div>
     <script type="text/javascript" src="js/engine.js"></script>
