--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Match-3 game</title>
     
   </head>
-  <body >
-    <div onload="draw();">
-        <canvas id="canvas" class="canvas" width="422" height="422">kek</canvas>
+  <body>
+    <div>
+        <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
-    <script type="text/javascript" src="js/engine.js"></script>
+    <script type="text/javascript" src="js/resources.js"></script>
+    <script type="text/javascript" src="js/sprite.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
