changed generation method and some logic

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/field.js"></script>
     <script type="text/javascript" src="js/resources.js"></script>
     <script type="text/javascript" src="js/sprite.js"></script>
+    <script type="text/javascript" src="js/field.js"></script>
+    <script type="text/javascript" src="js/field_graph.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
