--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
   </head>
   <body>
+    <span id="fps-counter">0fps</span>
     <div>
         <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
