--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
   </head>
   <body>
-    <div>
+    <div class="containerFild">
         <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
