full screen background

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
   </head>
   <body>
-    <span id="fps-counter">0fps</span>
     <div class="containerFild">
+       <div id="fps-counter">0fps</div>
         <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
