--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     
   </head>
   <body>
+    <div id="scores">0</div>
     <div class="containerFild">
        <div id="fps-counter">0fps</div>
-        <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
+       <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
