--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/resources.js"></script>
     <script type="text/javascript" src="js/sprite.js"></script>
+    <script type="text/javascript" src="js/patterns.js"></script>
     <script type="text/javascript" src="js/field.js"></script>
     <script type="text/javascript" src="js/field_graph.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
