modified background and strites

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     
   </head>
   <body>  
-    <div class="containerFild">
-       <div id="scores">0</div>
-       <div id="fps-counter">0fps</div>
+    <div class="containerField">
+       <div class="statPanel">
+           <div id="scores">0</div>
+           <div id="fps-counter">0fps</div>
+       </div>
        <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
