fixed mozila bug; added optimization feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
            <div id="scores">0</div>
            <div id="fps-counter">0fps</div>
        </div>
-       <canvas id="canvas" class="canvas" width="440" height="440">kek</canvas>
+       <canvas id="canvas" class="canvas" width="440" height="440">
+         <p>Your browser is not supported HTML5</p>
+       </canvas>
     </div>
     <script type="text/javascript" src="js/consts.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
