поправил финальную надпись

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -45,7 +45,7 @@
 		  document.getElementById("seconds").innerHTML  = Math.floor(seconds) + " Seconds";
 
 		  if (distance < 0) {
-		    document.getElementById("countdown").innerHTML = "We are together again";
+		    document.getElementById("countdown").innerHTML = "Happy new year!";
 		  } else {
 		  	setTimeout(cntDown, 1000);
 		  }
